Text wrapping fix for import overlay.

--- a/client/css/_import.styl
+++ b/client/css/_import.styl
@@ -29,6 +29,7 @@
     display inline-block
     vertical-align middle
     text-align left
+    white-space normal
 
   &.imports-overlay
     .content
